Emboss UI option wont save #42432

Closed
opened 2014-10-29 01:37:01 +01:00 by Mikhail Rachinskiy · 7 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.72.1 6c2ce7a

Short description of error
New emboss UI option wont save on "Save User Settings".

Exact steps for others to reproduce the error

  • Open Blender
  • Change emboss color value
  • Press "Save User Settings"
  • Exit then start Blender again
**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.72.1 6c2ce7a **Short description of error** New emboss UI option wont save on "Save User Settings". **Exact steps for others to reproduce the error** - Open Blender - Change emboss color value - Press "Save User Settings" - Exit then start Blender again
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Jonathan Williamson was assigned by Campbell Barton 2014-10-29 09:05:59 +01:00

Added subscriber: @petert

Added subscriber: @petert

I think I fixed this bug, but I'm not sure that it is "right fix".

I've changed in resources.c line 2499 from:

if (U.versionfile < 272 || (U.versionfile == 272 && U.subversionfile < 2)) {

to

if (U.versionfile < 271 || (U.versionfile == 271 && U.subversionfile < 6)) {

like on line 2489, and now it works.

I think I fixed this bug, but I'm not sure that it is "right fix". I've changed in resources.c line 2499 from: if (U.versionfile < 272 || (U.versionfile == 272 && U.subversionfile < 2)) { to if (U.versionfile < 271 || (U.versionfile == 271 && U.subversionfile < 6)) { like on line 2489, and now it works.

This issue was referenced by 154af70f2b

This issue was referenced by 154af70f2b5b7b9ae3eb203a71b4f70d28b78dec
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 154af70f2b.

Closed by commit 154af70f2b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42432
No description provided.