Fix T42432: Correct BLENDER_SUBVERSION

Bump up BLENDER_SUBVERSION to 2 to allow saving of widget emboss.